--- a/src/css/project.less
+++ b/src/css/project.less
@@ -1,5 +1,5 @@
 header{
-	display: none; 
+	display: none;
 	/*for now*/
 }
 
@@ -77,14 +77,27 @@ iframe{
 	.deck{
 		max-width: 700px;
 		font-family:@serif;
-		line-height: 1.2;
+		line-height: 1.4;
+		text-align: left;
+	}
+
+	.film{
+		background-color: gray;
+ border: none;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ text-decoration: none;
+ display:flex;
+ font-size: 16px;
+ cursor: pointer;
 
 	}
 }
 
 .spacer {
   padding: 0 0 100vh;
-	
+
 	p {
   	background-color: rgba(255, 255, 255, 0.75);
   	font-family: Georgia;
@@ -94,7 +107,7 @@ iframe{
   	margin: 0 auto;
   	padding: 1rem;
 	}
-	
+
 	p:not(:last-of-type) {
   	margin-bottom: 60vh;
 	}
@@ -111,14 +124,47 @@ section{
 	}
 }
 
+#second{
+	background:#fff;
+}
+
+#third{
+	background:#fff;
+}
+
+
 #fourth{
-	background: rgb(0,0,0);
-	background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);
+	background:#fff;
 }
 
 #fifth{
 	background:#fff;
 }
+
+#sixth{
+	background:#fff;
+}
+
+#seventh{
+	background:#fff;
+}
+
+#eighth{
+	background:#fff;
+}
+
+#nineth{
+	background:#fff;
+}
+
+#tenth{
+	background:#fff;
+}
+
+#eleventh{
+	background:#fff;
+}
+
 
 
 .bg-video{
