--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,5 +1,563 @@
-@import "values";
-@import "flexbox";
-@import "fonts";
-@import "newmedia";
-@import "project";
+/*
+Shims for Flexbox - should work on Safari and IE10+
+*/
+.display-flex {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+@font-face {
+  font-family: "Lora";
+  font-weight: normal;
+  font-style: normal;
+  src: url("https://fonts.googleapis.com/css?family=Lora");
+}
+@font-face {
+  font-family: "Lora Bold";
+  font-weight: 700;
+  font-style: normal;
+  src: url("https://fonts.googleapis.com/css?family=Lora:700");
+}
+@font-face {
+  font-family: "Source Sans Pro";
+  font-weight: normal;
+  font-style: normal;
+  src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+}
+@font-face {
+  font-family: "Source Sans Pro Bold";
+  font-weight: 700;
+  font-style: normal;
+  src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:700");
+}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+html {
+  touch-action: manipulation;
+}
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #f2f2f2;
+  font-size: 21px;
+  line-height: 1.58;
+  color: #000;
+  font-family: "Lora", Georgia, serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h2 {
+  text-align: center;
+}
+
+iframe {
+  border: none;
+}
+main {
+  display: block;
+}
+img {
+  width: 100%;
+}
+a {
+  color: #EC1C24;
+  text-decoration: none;
+  outline: 0;
+}
+a:hover {
+  color: #c51017;
+}
+a img {
+  border: none;
+}
+a :hover {
+  color: #c51017;
+}
+hr {
+  margin-top: 2em;
+  border-top: 1px solid #ccc;
+  border-bottom: none;
+  width: 75%;
+}
+.max {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+.text-hed {
+  font-size: 1.2em;
+  margin-bottom: 15px;
+  margin-top: 35px;
+  text-align: center;
+  font-family: "Source Sans Pro Bold", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.text-hed.padded {
+  padding-top: 10px;
+}
+
+p {
+  max-width: 730px;
+  margin: auto;
+  padding: 0 15px;
+  margin-bottom: 1em;
+}
+
+
+p:first-of-type:first-letter {
+    float: left;
+    font-size: 45px;
+    line-height: 1;
+    font-weight: bold;
+    margin-right: 9px;
+}
+
+.pquote {
+    float: left;
+    width: 100px;
+    background: #ddf;
+    font-weight: bold;
+    padding: 13px;
+    margin: 0 13px 13px 0;
+}
+
+blockquote {
+    margin: 0; /* gets rid of the default blockquote margin */
+}
+
+.pquote {
+    float: right;
+    width: 400px;
+    background: url(images/openquote.gif) top left no-repeat;
+    color: #030;
+    font-size: 26px;
+    line-height: 1.2;
+    font-style: italic;
+}
+
+.pquote2 {
+    float: left;
+    width: 400px;
+    background: url(images/openquote.gif) top left no-repeat;
+    color: #030;
+    font-size: 26px;
+    line-height: 1.2;
+    font-style: italic;
+    padding-left: 50px;
+}
+
+blockquote {
+    margin: 0;
+}
+
+.pquote p:first-letter {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+@media (max-width: 480px) {
+  p {
+    font-size: 0.8em;
+  }
+}
+li {
+  max-width: 650px;
+  margin: 0 auto;
+}
+@media (max-width: 480px) {
+  li {
+    margin: 0 5px;
+  }
+}
+.author {
+  margin-top: 10px;
+  font-size: 15px;
+  text-align: center;
+  margin-bottom: 0;
+}
+.date {
+  font-size: 15px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+header {
+  background: #000;
+  /*  -webkit-box-shadow: 0 0 6px 0 @gray;
+  -moz-box-shadow: 0 0 6px 0 @gray;
+  box-shadow: 0 0 6px 0 @gray;*/
+}
+header a {
+  text-decoration: none;
+}
+header .logo {
+  float: left;
+  padding: 6px 0 0 8px;
+  margin: 0;
+}
+header .logo img {
+  vertical-align: text-bottom;
+  width: 180px;
+}
+@media (max-width: 490px) {
+  header .logo {
+    display: none;
+  }
+}
+header::after {
+  clear: both;
+  content: " ";
+  display: block;
+}
+header.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  left: 0;
+  height: 37px;
+}
+header .link {
+  padding: 5px 10px 0 7px;
+  vertical-align: 3px;
+  font-size: 18px;
+  font-family: "Source Sans Pro Bold", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  cursor: pointer;
+}
+header .link.social {
+  float: right;
+  margin: 0 6px;
+  padding: 4px 2px;
+}
+header .link.email {
+  margin-right: 10px;
+}
+header .logo-link {
+  cursor: pointer;
+  margin: 0 0 0 10px;
+  vertical-align: 0;
+}
+header .logo-link img {
+  opacity: 1;
+  height: 20px;
+}
+.link,
+.logo-link {
+  display: inline-block;
+}
+.caption {
+  text-align: left;
+  font-family: "Source Sans Pro", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 0 10px;
+  max-width: 100%;
+}
+.caption.landing {
+  margin-bottom: 2.5em;
+}
+.byline {
+  color: #000;
+  font-style: italic;
+}
+.background-img {
+  height: 800px;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  display: block;
+  z-index: 1;
+}
+@media (max-width: 480px) {
+  .background-img {
+    height: 640px;
+  }
+}
+.full-width-img {
+  margin: 2em auto;
+  width: 100%;
+}
+.full-width-img img {
+  width: 100%;
+}
+.inline-img {
+  max-width: 730px;
+  margin: 2em auto;
+}
+.inline-img .caption {
+  padding: 0;
+}
+@media (max-width: 768px) {
+  .inline-img .caption {
+    padding: 0 10px;
+  }
+}
+footer {
+  background: #222222;
+  opacity: 0.95;
+  padding: 0 10px;
+  position: relative;
+  z-index: 99;
+  margin-top: 10px;
+  clear: both;
+}
+footer .logo {
+  float: left;
+  margin-right: 10px;
+}
+footer .logo img {
+  padding: 10px 0;
+  width: 180px;
+  vertical-align: bottom;
+}
+footer::after {
+  clear: both;
+  content: " ";
+  display: block;
+}
+.credits {
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 10px;
+  text-align: center;
+  font-size: 15px;
+  font-family: "Source Sans Pro", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 80%;
+}
+@media (max-width: 480px) {
+  .credits {
+    width: 100%;
+  }
+}
+.credits .entry {
+  padding-bottom: 10px;
+}
+.embed-container {
+  position: relative;
+  padding-bottom: 65%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+header {
+  display: none;
+  /*for now*/
+}
+body {
+  background: #f2f2f2;
+}
+iframe {
+  width: 100%;
+}
+.sticky {
+  display: flex;
+  height: 100vh;
+  margin: 0;
+  width: 100%;
+  justify-content: center;
+  top: 0;
+  z-index: -1;
+  position: -webkit-sticky;
+  position: sticky;
+}
+.sticky img {
+  display: block;
+  -o-object-fit: contain;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+#topper {
+  color: #fff;
+  position: relative;
+}
+#topper .bg-img {
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
+  -webkit-transition: filter 2s;
+  /* Safari */
+  transition: filter 2s;
+  align-items: center;
+  align-self: flex-start;
+}
+#topper .title {
+  font-family: "Source Sans Pro Bold", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  flex-direction: column;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 103.5vh;
+  background: rgba(0, 0, 0, 0.42);
+  -webkit-animation: fadein 5s;
+  /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 5s;
+  /* Firefox < 16 */
+  -ms-animation: fadein 5s;
+  /* Internet Explorer */
+  -o-animation: fadein 5s;
+  /* Opera < 12.1 */
+  animation: fadein 5s;
+}
+#topper h1 {
+  font-size: 5em;
+  line-height: 1;
+  margin: 0;
+  font-family: "Lora", Georgia, serif;
+  padding-top: 150px;
+}
+#topper .deck {
+  max-width: 700px;
+  font-family: "Lora", Georgia, serif;
+  line-height: 1.4;
+  text-align: left;
+}
+
+#topper .film {
+  background-color: gray;
+  border: none;
+  color: white;
+  margin-top: 40px;
+  padding: 12px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#topper .scroll {
+  text-align: center;
+  padding-top: 300px;
+  display: flex;
+}
+
+.spacer {
+  padding: 0 0 100vh;
+}
+
+.spacer p {
+  background-color: rgba(255, 255, 255, 0.75);
+  font-family: Georgia;
+  font-size: 1.1rem;
+  max-width: 40rem;
+  line-height: 1.8;
+  margin: 0 auto;
+  padding: 1rem;
+}
+.spacer p:not(:last-of-type) {
+  margin-bottom: 60vh;
+}
+section {
+  padding: 0 0 25vh;
+}
+.cover img {
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+#second {
+  background: #f2f2f2;
+  padding: 0 0 5vh;
+}
+
+#third {
+  background: #f2f2f2;
+}
+
+#fourth {
+  background: #f2f2f2;
+}
+
+#fifth {
+  background: #f2f2f2;
+}
+
+#sixth {
+  background: #f2f2f2;
+}
+
+#seventh {
+  background: #f2f2f2;
+}
+
+#eighth {
+  background: #f2f2f2;
+}
+
+#nineth {
+  background: #f2f2f2;
+}
+
+#tenth {
+  background: #f2f2f2;
+}
+
+.bg-video {
+  width: 100%;
+}
+.bg-video iframe {
+  height: 104%;
+}
+.inline-asset {
+  max-width: 800px;
+  margin: 0 auto 1em;
+}
+.inline-asset .caption {
+  margin-top: 0;
+}
+.inline-asset .credit {
+  color: #808080;
+}
