--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -561,3 +561,41 @@ section {
 .inline-asset .credit {
   color: #808080;
 }
+
+
+#topper{
+  position: fixed;
+  width:100%;
+  top:0;
+  left:0;
+}
+
+#second{
+  margin-top:200vh;
+}
+
+#topper .bg-video{
+  position: relative;
+  height:100vh;
+  width:100vw;
+  overflow: hidden;
+}
+
+#topper .bg-video iframe{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 100vh !important;
+  width: 600vw !important;
+}
+
+@media (min-aspect-ratio:16/9){
+  #topper .bg-video iframe{
+    height: 200vh !important;
+    width: 100vw !important;
+  }
+}
+
+
+
