--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -590,12 +590,50 @@ section {
   width: 600vw !important;
 }
 
+.linebreak {
+    margin: 70px auto 0;
+    max-width: 960px;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 10vh;
+
+    h2 {
+      text-align: center;
+      display: block;
+      overflow: hidden;
+      margin: 15px 20px 0;
+
+      span {
+
+        position: relative;
+        display: inline-block;
+
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 35%;
+          height: 1px;
+          background: #757575;
+          width: 99999px;
+        }
+
+        &::before {
+          left: 100%;
+          margin-left: 60px;
+        }
+        &::after {
+          right: 100%;
+          margin-right: 60px;
+        }
+      }
+  }
+}
+
+
 @media (min-aspect-ratio:16/9){
   #topper .bg-video iframe{
     height: 200vh !important;
     width: 100vw !important;
   }
 }
-
-
-
