--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -133,7 +133,7 @@ blockquote {
 .pquote {
     float: right;
     width: 400px;
-    background: url(images/openquote.gif) top left no-repeat;
+    // background: url(images/openquote.gif) top left no-repeat;
     color: #030;
     font-size: 26px;
     line-height: 1.2;
@@ -143,7 +143,7 @@ blockquote {
 .pquote2 {
     float: left;
     width: 400px;
-    background: url(images/openquote.gif) top left no-repeat;
+    // background: url(images/openquote.gif) top left no-repeat;
     color: #030;
     font-size: 26px;
     line-height: 1.2;
