--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -133,7 +133,7 @@ blockquote {
 .pquote {
     float: right;
     width: 400px;
-    // background: url(images/openquote.gif) top left no-repeat;
+    background: top left no-repeat;
     color: #030;
     font-size: 26px;
     line-height: 1.2;
@@ -143,7 +143,7 @@ blockquote {
 .pquote2 {
     float: left;
     width: 400px;
-    // background: url(images/openquote.gif) top left no-repeat;
+    background: top left no-repeat;
     color: #030;
     font-size: 26px;
     line-height: 1.2;
@@ -273,6 +273,8 @@ header .logo-link img {
   display: block;
   z-index: 1;
 }
+
+
 @media (max-width: 480px) {
   .background-img {
     height: 640px;
@@ -485,8 +487,9 @@ iframe {
 }
 
 .spacer {
-  padding: 0 0 100vh;
+  padding: 0 0 5vh;
 }
+
 
 .spacer p {
   background-color: rgba(255, 255, 255, 0.75);
@@ -497,6 +500,7 @@ iframe {
   margin: 0 auto;
   padding: 1rem;
 }
+
 .spacer p:not(:last-of-type) {
   margin-bottom: 60vh;
 }
@@ -635,5 +639,44 @@ section {
   #topper .bg-video iframe{
     height: 200vh !important;
     width: 100vw !important;
+  }
+}
+
+
+.carousel-cell{
+  width: 120vh;
+  margin-right:100px;
+}
+
+.fullvideo{
+  position:fixed;
+  display: none;
+  top:0;
+  left:0;
+  right:0;
+  height:100%;
+  width:100%;
+  background: black;
+
+  .close{
+    position: absolute;
+    top:10px;
+    right:20px;
+    text-shadow: 1px 1px 1px #333;
+    font-size: 30px;
+    z-index: 2;
+    color:#fff;
+    cursor:pointer;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
+
+.fullvideo-wrapper{
+  padding-left: 40px;
+  width: 98%;
+}
+
+  .embed-container{
+    padding-bottom:56%;
   }
 }
