--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -487,7 +487,7 @@ iframe {
 }
 
 .spacer {
-  padding: 0 0 5vh;
+  padding: 0 0 10vh;
 }
 
 
@@ -644,8 +644,9 @@ section {
 
 
 .carousel-cell{
-  width: 120vh;
-  margin-right:100px;
+  width: 80vw;
+  overflow: hidden;
+  padding-right:100px;
 }
 
 .fullvideo{
