--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -549,6 +549,18 @@ section {
   background: #f2f2f2;
 }
 
+#eleventh {
+  background: #f2f2f2;
+}
+
+#twelfth {
+  background: #f2f2f2;
+}
+
+#thirteenth {
+  background: #f2f2f2;
+}
+
 .bg-video {
   width: 100%;
 }
