--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -56,6 +56,11 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  text-align: center;
+  font-family: "Source Sans Pro Bold", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 iframe {
   border: none;
 }
@@ -689,7 +694,5 @@ section {
   width: 98%;
 }
 
-  .embed-container{
-    padding-bottom:56%;
-  }
+
 }
