congrats. looks good.

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -52,6 +52,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 h2 {
   text-align: center;
 }
@@ -116,7 +120,7 @@ p {
 
 p:first-of-type:first-letter {
     float: left;
-    font-size: 45px;
+    font-size: 65px;
     line-height: 1;
     font-weight: bold;
     margin-right: 9px;
@@ -510,7 +514,7 @@ iframe {
   margin-bottom: 60vh;
 }
 section {
-  padding: 0 0 25vh;
+  padding: 0 0 15vh;
 }
 .cover img {
   -o-object-fit: cover;
@@ -689,10 +693,15 @@ section {
     font-family: sans-serif;
   }
 
-.fullvideo-wrapper{
-  padding-left: 40px;
-  width: 98%;
+  .fullvideo-wrapper{
+    padding-left: 40px;
+    width: 98%;
+  }
+
 }
 
 
+.juxtapose{
+  height: 69vw;
 }
+
