--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -705,3 +705,14 @@ section {
   height: 69vw;
 }
 
+.graphic-caption{
+  padding-top: 5vh;
+  padding-left: 12vw;
+}
+
+.credits{
+  width:100vw;
+  color: white;
+  text-align: left;
+  background-color: black;
+}
