--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -331,15 +331,20 @@ footer::after {
   content: " ";
   display: block;
 }
+
 .credits {
-  max-width: 900px;
-  margin: 30px auto;
-  padding: 10px;
+  color: white;
   text-align: center;
+  padding: 30px;
+  margin-bottom: -20px;
+  opacity: 0.6;
+  background-color: grey;
+  display: block;
   font-size: 15px;
   font-family: "Source Sans Pro", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  width: 80%;
+  height: 100%;
 }
+
 @media (max-width: 480px) {
   .credits {
     width: 100%;
@@ -491,7 +496,7 @@ iframe {
 
 #topper .scroll {
   text-align: center;
-  padding-top: 300px;
+  padding-top: 200px;
   display: flex;
 }
 
@@ -700,7 +705,6 @@ section {
 
 }
 
-
 .juxtapose{
   height: 69vw;
 }
@@ -708,11 +712,4 @@ section {
 .graphic-caption{
   padding-top: 5vh;
   padding-left: 12vw;
-}
-
-.credits{
-  width:100vw;
-  color: white;
-  text-align: left;
-  background-color: black;
 }
