--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -190,6 +190,7 @@ blockquote {
     line-height: 1.2;
     font-style: italic;
     padding-left: 50px;
+    margin-right: 20px;
 }
 
 blockquote {
