--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ blockquote {
   line-height: 1.2;
   font-style: italic;
   padding-left: 50px;
+  margin-right: 20px;
 }
 blockquote {
   margin: 0;
