--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -86,7 +86,7 @@
      	</div>
 
 	    <div class="footer-bottom">
-	  		<div class="footer-bottom-text">© UNSEEN 2019. All Rights Reserved UC BERKELEY GRADUATE SCHOOL OF 	JOURNALISM</div>
+	  		<div class="footer-bottom-text">© UNSEEN 2019. All Rights Reserved</div>
 	  	</div>
 	  	
   	</footer>
