--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -807,8 +807,8 @@ section {
   letter-spacing: 1px;
   font-family: @upstater;
   font-size:1.5em;
-  width:100%; 
-  background:#f1f1f1;  
+  width:100%;
+  background:#f1f1f1;
   position:fixed;
   top:76px;
   display: none;
@@ -825,9 +825,9 @@ section {
 .menu a:hover{text-decoration:none; color:#666;}
 
 .glyphicon-home{
-  color:white; 
-  font-size:1.5em; 
-  margin-top:5px; 
+  color:white;
+  font-size:1.5em;
+  margin-top:5px;
   margin:0 auto;
 }
 
@@ -984,7 +984,7 @@ header{
     &:hover{
       text-shadow: 1px 1px 1px #ccc;
     }
-  
+
   }
 
   hr{
@@ -996,6 +996,29 @@ header{
     border-bottom:none;
   }
 }
+
+
+.route {
+  fill: none;
+  stroke: #4a575b;
+  opacity: 0.6;
+  stroke-linecap: round;
+}
+
+.land { fill:#c9c9c9; }
+
+svg { background: #efefef; }
+
+h1{
+  font-size:30px;
+  font-family: 'Roboto', sans-serif;
+  text-align:center
+}
+
+
+
+
+
 
 footer{
   color:#fff;
