--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1,7 +1,7 @@
 @import 'values';
 /*
 Shims for Flexbox - should work on Safari and IE10+
-*/ 
+*/
 
 .display-flex {
   display: -webkit-flex;
@@ -383,12 +383,31 @@ footer::after {
     width: 100%;
   }
 }
+
 .credits .entry {
   padding-bottom: 10px;
 }
-.embed-container {
+
+.embed-container-feature {
   position: relative;
   padding-bottom: 100vh;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container-feature iframe,
+.embed-container-feature object,
+.embed-container-feature embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 65%;
   height: 0;
   overflow: hidden;
   max-width: 100%;
@@ -402,6 +421,7 @@ footer::after {
   width: 100%;
   height: 100%;
 }
+
 @keyframes fadein {
   from {
     opacity: 0;
