--- a/style.css
+++ b/style.css
@@ -318,6 +318,22 @@ footer::after {
 .credits .entry {
   padding-bottom: 10px;
 }
+.embed-container-feature {
+  position: relative;
+  padding-bottom: 100vh;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container-feature iframe,
+.embed-container-feature object,
+.embed-container-feature embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .embed-container {
   position: relative;
   padding-bottom: 65%;
@@ -614,13 +630,14 @@ section {
   height: 100%;
   width: 100%;
   background: black;
+  z-index: 9000;
 }
 .fullvideo .close {
   position: absolute;
   top: 10px;
   right: 20px;
   text-shadow: 1px 1px 1px #333;
-  font-size: 30px;
+  font-size: 25px;
   z-index: 2;
   color: #fff;
   cursor: pointer;
